# localsquash-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: ПЗ1 ОПІ Цюпак ВС ПЗПІз-25-1.docx  ПЗ2 ОПІ Цюпак ВС ПЗПІз-25-1.docx
src/localsquash/: __init__.py  compressor.py
tests/: test_compressor.py
