[project]
name = "localsquash-analysis"
version = "0.1.0"
description = "Аналіз LocalSquash в межах дисципліни ОПІ (ХНУРЕ)"
authors = [{name = "Цюпак Владислав Сергійович", email = "cupak3002@gmail.com"}]
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
